test/classes/delete-free/borrowed/makeNewBorrowed.good
makeNewBorrowed.chpl:3: error: creating a 'new borrowed' type is a not allowed
